# computational_intelligence_2022

./: README.md  pyproject.toml
Lab1/: README.md  lab1.ipynb  lab1.py
lab2/: README.md  lab2.ipynb  lab2.py
lab3/: README.md  battleground.py  genetic_algorithm.py  lab3.ipynb  min_max.ipynb  min_max_agent.py  other_agents.py  q-learning.ipynb  reinforcement_learning_agent.py  utils.py
